@@ -13,8 +13,6 @@
     <artifactId>graal-native-example</artifactId>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <graal.feature>top.dreamlike.graal.PanamaFeature</graal.feature>
         <main.class>top.dreamlike.Main</main.class>
@@ -47,6 +45,7 @@
                                 <buildArg>-O3</buildArg>
                                 <buildArg>--gc=G1</buildArg>
                                 <buildArg>-march=native</buildArg>
+                                <buildArg>-H:+ForeignAPISupport</buildArg>
                             </buildArgs>
                             <skipNativeTests>true</skipNativeTests>
                             <mainClass>${main.class}</mainClass>
@@ -81,6 +80,7 @@
                                 <buildArg>--enable-preview</buildArg>
                                 <buildArg>--features=${graal.feature}</buildArg>
                                 <buildArg>-Ob</buildArg>
+                                <buildArg>-H:+ForeignAPISupport</buildArg>
                                 <buildArg>-g</buildArg>
                             </buildArgs>
                             <skipNativeTests>true</skipNativeTests>
@@ -90,6 +90,45 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>native-static</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>0.9.28</version>
+                        <extensions>true</extensions>
+                        <executions>
+                            <execution>
+                                <id>build-native</id>
+                                <goals>
+                                    <goal>compile-no-fork</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <buildArgs>
+                                <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
+                                <buildArg>--no-fallback</buildArg>
+                                <buildArg>--enable-preview</buildArg>
+                                <buildArg>--features=${graal.feature}</buildArg>
+                                <buildArg>-Ob</buildArg>
+                                <buildArg>-H:+ForeignAPISupport</buildArg>
+                                <buildArg>-g</buildArg>
+                                <buildArg>--static</buildArg>
+                                <buildArg>--libc=musl</buildArg>
+                            </buildArgs>
+                            <skipNativeTests>true</skipNativeTests>
+                            <mainClass>${main.class}</mainClass>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+
     </profiles>
 
     <dependencies>
@@ -103,7 +142,6 @@
         <dependency>
             <groupId>io.github.dreamlike-ocean</groupId>
             <artifactId>panama-generator</artifactId>
-            <version>1.1</version>
         </dependency>
     </dependencies>
     <build>
@@ -115,6 +153,7 @@
                     <target>${java.version}</target>
                     <source>${java.version}</source>
                     <useIncrementalCompilation>false</useIncrementalCompilation>
+                    <enablePreview>true</enablePreview>
                     <annotationProcessors>
                         <annotationProcessor>
                             top.dreamlike.panama.generator.proxy.PanamaAnnotationProcessor
@@ -124,8 +163,8 @@
                         <compilerArg>-Aindy.enable=false</compilerArg>
                         <compilerArg>-Agenerate.graal.feature.enable=true</compilerArg>
                         <compilerArg>-Agenerate.graal.feature.name=${graal.feature}</compilerArg>
-                        <compilerArg>--enable-preview</compilerArg>
                     </compilerArgs>
+
                 </configuration>
             </plugin>
             <plugin>
